COMPASS-3903: Fix double scrollbar in table view

--- a/packages/compass-crud/src/components/ag-grid-dist.css
+++ b/packages/compass-crud/src/components/ag-grid-dist.css
@@ -379,7 +379,7 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia {
 
 .ag-body-viewport.ag-layout-normal {
   overflow-x: auto;
-  overflow-y: auto;
+  overflow-y: hidden;
   height: 100%; }
 
 .ag-full-width-viewport-wrapper {
